# Arch-Bot

./: README.md  autoresponder.json  config.json  custom_roles.json  giveaway.json  info.json  main.py  pyproject.toml  ray.db  requirements.txt
Cogs/: Giveaways.py  afk.py  anti.py  auto.py  autorole.py  events.py  extra.py  filters.py  giveaway_task.py  help.py  leaderboard.py  mention.py  moderation.py  music.py  owner.py  role.py
Extra/: Tools.py  config.py  event.py  np.py  paginator.py  utils.py
